fixes dashboard box overflow

--- a/resources/assets/less/overrides.less
+++ b/resources/assets/less/overrides.less
@@ -719,6 +719,14 @@ th.css-location > .th-inner::before {
     height:170px;
   }
 }
+@media screen and (max-width: 1494px) and (min-width: 1200px){
+  .dashboard{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
+    white-space: nowrap;
+  }
+}
 
 .ellipsis {
   overflow: hidden;
